WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47671
Pressing the Alt key when MiniBrowser's WKView is focused doesn't send focus to the menu bar
https://bugs.webkit.org/show_bug.cgi?id=47671
Summary
Pressing the Alt key when MiniBrowser's WKView is focused doesn't send focus ...
Adam Roben (:aroben)
Reported
2010-10-14 08:29:54 PDT
Pressing the Alt key when MiniBrowser's WKView is focused doesn't send focus to the menu bar
Attachments
Patch
(23.41 KB, patch)
2010-10-14 08:31 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Call ::DefWindowProcW for unhandled key events
(23.42 KB, patch)
2010-10-14 08:46 PDT
,
Adam Roben (:aroben)
sfalken
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-10-14 08:31:25 PDT
Created
attachment 70739
[details]
Patch
WebKit Review Bot
Comment 2
2010-10-14 08:38:31 PDT
Attachment 70739
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/TestWebKitAPI/Tests/WebKit2/win/AltKeyGeneratesWMSysCommand.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKitTools/TestWebKitAPI/Tests/WebKit2/win/AltKeyGeneratesWMSysCommand.cpp:29: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Early Warning System Bot
Comment 3
2010-10-14 08:43:39 PDT
Attachment 70739
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/4381030
Adam Roben (:aroben)
Comment 4
2010-10-14 08:46:43 PDT
Created
attachment 70742
[details]
Call ::DefWindowProcW for unhandled key events
WebKit Review Bot
Comment 5
2010-10-14 08:52:31 PDT
Attachment 70742
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/TestWebKitAPI/Tests/WebKit2/win/AltKeyGeneratesWMSysCommand.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKitTools/TestWebKitAPI/Tests/WebKit2/win/AltKeyGeneratesWMSysCommand.cpp:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 6
2010-10-14 12:29:43 PDT
Committed
r69788
: <
http://trac.webkit.org/changeset/69788
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug