WebKit2/UIProcess/API/qt/qwkpage.cpp
@@ -108,6 +108,10 @@ FloatRect QWKPagePrivate::convertToUserSpace(const FloatRect& rect)
     return rect;
 }
 
+void QWKPagePrivate::didNotHandleKeyEvent(const NativeWebKeyboardEvent&)
+{
+}
+
 void QWKPagePrivate::paint(QPainter* painter, QRect area)
 {
     painter->save();
