WebKit2/UIProcess/PageClient.h
@@ -36,6 +36,7 @@ namespace WebCore {
 
 namespace WebKit {
 
+class NativeWebKeyboardEvent;
 class WebEditCommandProxy;
 
 class PageClient {
@@ -57,6 +58,8 @@ public:
 
     virtual WebCore::FloatRect convertToDeviceSpace(const WebCore::FloatRect&) = 0;
     virtual WebCore::FloatRect convertToUserSpace(const WebCore::FloatRect&) = 0;
+
+    virtual void didNotHandleKeyEvent(const NativeWebKeyboardEvent&) = 0;
 
 #if USE(ACCELERATED_COMPOSITING)
     virtual void pageDidEnterAcceleratedCompositing() = 0;
