WebKitTools/TestWebKitAPI/win/PlatformWebViewWin.cpp
@@ -25,11 +25,21 @@
 
 #include "PlatformWebView.h"
 
+#include "WindowMessageObserver.h"
+
 namespace TestWebKitAPI {
 
 static const wchar_t* hostWindowClassName = L"org.WebKit.TestWebKitAPI.PlatformWebViewHostWindow";
+static const wchar_t* webViewPointerProperty = L"org.WebKit.TestWebKitAPI.PlatformWebView.InstancePointer";
 
-static void registerWindowClass()
+// These offsets come from rom <http://msdn.microsoft.com/en-us/library/ms646280(VS.85).aspx>.
+static const size_t repeatCountBitOffset = 0;
+static const size_t scanCodeBitOffset = 16;
+static const size_t contextCodeBitOffset = 29;
+static const size_t previousStateBitOffset = 30;
+static const size_t transitionStateBitOffset = 31;
+
+void PlatformWebView::registerWindowClass()
 {
     static bool initialized;
     if (initialized)
@@ -39,7 +49,7 @@ static void registerWindowClass()
     WNDCLASSEXW wndClass = {0};
     wndClass.cbSize = sizeof(wndClass);
     wndClass.style = CS_HREDRAW | CS_VREDRAW;
-    wndClass.lpfnWndProc = DefWindowProcW;
+    wndClass.lpfnWndProc = wndProc;
     wndClass.hCursor = LoadCursor(0, IDC_ARROW);
     wndClass.lpszClassName = hostWindowClassName;
 
@@ -47,11 +57,12 @@ static void registerWindowClass()
 }
 
 PlatformWebView::PlatformWebView(WKPageNamespaceRef namespaceRef)
+    : m_parentWindowMessageObserver(0)
 {
     registerWindowClass();
 
     RECT viewRect = {0, 0, 800, 600};
-    m_window = CreateWindowExW(0, hostWindowClassName, L"TestWebKitAPI", WS_OVERLAPPEDWINDOW, viewRect.left, viewRect.top, viewRect.right, viewRect.bottom, 0, 0, 0, 0);
+    m_window = CreateWindowExW(0, hostWindowClassName, L"TestWebKitAPI", WS_OVERLAPPEDWINDOW, viewRect.left, viewRect.top, viewRect.right, viewRect.bottom, 0, 0, 0, this);
     m_view = WKViewCreate(viewRect, namespaceRef, m_window);
 }
 
@@ -70,16 +81,38 @@ void PlatformWebView::simulateSpacebarKeyPress()
 {
     HWND window = WKViewGetWindow(m_view);
 
-    // These offsets come from rom <http://msdn.microsoft.com/en-us/library/ms646280(VS.85).aspx>.
-    static const size_t repeatCountBitOffset = 0;
-    static const size_t scanCodeBitOffset = 16;
-    static const size_t previousStateBitOffset = 30;
-    static const size_t transitionStateBitOffset = 31;
-
     // These values match what happens when you press the spacebar in Notepad, as observed by Spy++.
     ::SendMessageW(window, WM_KEYDOWN, VK_SPACE, (1 << repeatCountBitOffset) | (39 << scanCodeBitOffset));
     ::SendMessageW(window, WM_CHAR, ' ', (1 << repeatCountBitOffset) | (39 << scanCodeBitOffset));
     ::SendMessageW(window, WM_KEYUP, VK_SPACE, (1 << repeatCountBitOffset) | (39 << scanCodeBitOffset) | (1 << previousStateBitOffset) | (1 << transitionStateBitOffset));
+}
+
+void PlatformWebView::simulateAltKeyPress()
+{
+    HWND window = WKViewGetWindow(m_view);
+
+    // These values match what happens when you press the Alt key in Notepad, as observed by Spy++.
+    ::SendMessageW(window, WM_SYSKEYDOWN, VK_MENU, (1 << repeatCountBitOffset) | (38 << scanCodeBitOffset) | (1 << contextCodeBitOffset));
+    ::SendMessageW(window, WM_SYSKEYUP, VK_MENU, (1 << repeatCountBitOffset) | (38 << scanCodeBitOffset) | (1 << previousStateBitOffset) | (1 << transitionStateBitOffset));
+}
+
+LRESULT PlatformWebView::wndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam)
+{
+    PlatformWebView* webView;
+    if (message == WM_CREATE) {
+        CREATESTRUCT* createStruct = reinterpret_cast<CREATESTRUCT*>(lParam);
+        webView = static_cast<PlatformWebView*>(createStruct->lpCreateParams);
+        ::SetPropW(hWnd, webViewPointerProperty, webView);
+    } else
+        webView = reinterpret_cast<PlatformWebView*>(::GetPropW(hWnd, webViewPointerProperty));
+
+    if (webView && webView->m_parentWindowMessageObserver)
+        webView->m_parentWindowMessageObserver->windowReceivedMessage(hWnd, message, wParam, lParam);
+
+    if (message == WM_NCDESTROY)
+        ::RemovePropW(hWnd, webViewPointerProperty);
+
+    return ::DefWindowProcW(hWnd, message, wParam, lParam);
 }
 
 } // namespace TestWebKitAPI
